test_regress/t/t_order_blkloopinit_bad.out
%Error-BLKLOOPINIT: t/t_order_blkloopinit_bad.v:26:20: Unsupported: Non-blocking assignment to array with compound element type inside loop
                                                     : ... note: In instance 't'
   26 |          array2[i] <= null;   
      |                    ^~
                    ... For error description see https://verilator.org/warn/BLKLOOPINIT?v=latest
%Error: Exiting due to
